<resources>
    <string name="app_name">Resourl</string>

    <!-- Placeholder -->
    <string name="ph_resource_name">Resource Name</string>
    <string name="ph_resource_url">https://www.resourl.com</string>
    <string name="ph_resource_date">09, January 2024</string>
    <string name="ph_resource_category">Category</string>
    <string name="ph_resource_description">Brief description of what you use this resource for…</string>

    <!-- Login Screen -->
    <string name="login_title_hero_1">Hi there! \nWelcome back</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="login_forgot_password_button">Forgot your password?</string>
    <string name="login_login_button">Login</string>
    <string name="login_register_button">Create a new account</string>

    <string name="login_email_empty_error">The email can\'t be empty</string>
    <string name="login_email_invalid_error">Invalid email format</string>
    <string name="login_password_empty_error">The password can\'t be empty</string>
    <string name="login_password_invalid_error">Password must be at least %1$d characters long and include uppercase, lowercase, digit, and special character</string>

    <!-- Register Screen -->
    <string name="register_title_hero">Hi there! \nWelcome! Let’s get started.</string>
    <string name="register_hint_name">Name</string>
    <string name="register_hint_lastname">Last Name</string>
    <string name="register_hint_email">Email</string>
    <string name="register_hint_password">Password</string>
    <string name="register_hint_confirm_password">Confirm Password</string>
    <string name="register_register_button">Register</string>

    <string name="register_name_empty_error">The name can\'t be empty</string>
    <string name="register_name_whitespace_error">The name can\'t contain only whitespace</string>
    <string name="register_last_name_empty_error">The last name can\'t be empty</string>
    <string name="register_last_name_whitespace_error">The last name can\'t contain only whitespace</string>
    <string name="register_email_empty_error">The email can\'t be empty</string>
    <string name="register_email_invalid_error">Invalid email format</string>
    <string name="register_password_empty_error">The password can\'t be empty</string>
    <string name="register_password_invalid_error">Password must be at least %1$d characters long and include uppercase, lowercase, digit, and special character</string>
    <string name="register_confirm_password_empty_error">The confirm password can\'t be empty</string>
    <string name="register_confirm_password_mismatch_error">Passwords do not match</string>

    <!-- Recovery Screen -->
    <string name="recovery_title_hero">Forgot your password?\nDon’t worry, We’ll help you recover it.</string>
    <string name="recovery_hint_email">Email</string>
    <string name="recovery_recovery_button">Recovery</string>

    <string name="recovery_email_empty_error">The email can\'t be empty</string>
    <string name="recovery_email_invalid_error">Invalid email format</string>

    <!-- Account Verification Screen -->
    <string name="account_verification_title_hero">Account Verification</string>
    <string name="account_verification_text">Enter the 6-digit code sent to your email address</string>
    <string name="account_verification_verify_code_button">Verify Code</string>

    <string name="account_verification_otp_code_empty_error">The OTP code can\'t be empty</string>
    <string name="account_verification_otp_code_invalid_error">Invalid OTP code</string>
    <string name="account_verification_otp_code_length_error">The OTP code must be %1$d characters long</string>

    <!-- Reset Password Screen -->
    <string name="reset_password_title_hero">Reset Password</string>
    <string name="reset_password_text">Create a new password secure</string>
    <string name="reset_password_hint_email">Email</string>
    <string name="reset_password_hint_password">New Password</string>
    <string name="reset_password_hint_confirm_password">Confirm Password</string>
    <string name="reset_password_reset_button">Reset Password</string>

    <!-- Add Resource Screen -->
    <string name="add_resource_title">Add Resource</string>
    <string name="add_resource_header_recent">Recent Resource</string>
    <string name="add_resource_hint_url">https://resourl.com</string>
    <string name="add_resource_delete_button">Delete</string>
    <string name="add_resource_save_button">Done</string>

    <!-- Edit Resource Screen -->
    <string name="edit_resource_title">Edit Resource</string>
    <string name="edit_resource_hint_url">Resource URL</string>
    <string name="edit_resource_hint_title">Resource Title</string>
    <string name="edit_resource_hint_description">Brief description of what you use this resource for…</string>
    <string name="edit_resource_hint_category">Add new or search category</string>
    <string name="edit_resource_hint_tags">Add new or search tags</string>
    <string name="edit_resource_update_button">Update Resource</string>

    <!-- Search Resource Screen -->
    <string name="search_resource_title">Search Resource</string>
    <string name="search_resource_hint">Search resources…</string>

</resources>