<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:fitsSystemWindows="true"
    android:layout_margin="20dp"
    tools:context=".features.auth.presentation.fragments.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceDisplaySmall"
                android:text="@string/login_title_hero_1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceDisplaySmall"
                android:text="@string/login_title_hero_2"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:boxStrokeColor="?attr/colorOutlineVariant"
            app:hintEnabled="false"
            app:boxCornerRadiusBottomStart="50dp"
            app:boxCornerRadiusBottomEnd="50dp"
            app:boxCornerRadiusTopStart="50dp"
            app:boxCornerRadiusTopEnd="50dp" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/login_hint_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:boxStrokeColor="?attr/colorOutlineVariant"
            app:hintEnabled="false"
            app:boxCornerRadiusBottomStart="50dp"
            app:boxCornerRadiusBottomEnd="50dp"
            app:boxCornerRadiusTopStart="50dp"
            app:boxCornerRadiusTopEnd="50dp" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/login_hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgotPasswordTextButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:textColor="?attr/colorOnPrimaryContainer"
            android:text="@string/login_forgot_password_button"
            android:layout_marginBottom="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:textColor="?attr/colorOnPrimaryFixed"
            android:text="@string/login_login_button"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerOutlinedButton"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textColor="?attr/colorSecondary"
            android:text="@string/login_register_button"/>

    </LinearLayout>

</FrameLayout>