<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.editresource.presentation.fragments.EditResourceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingHorizontal="20dp">

            <!-- Botón izquierdo -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/backButton"
                style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                android:layout_width="56dp"
                android:layout_height="56dp"
                app:icon="@drawable/ic_arrow_left"
                app:iconGravity="textStart"
                app:iconSize="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <!-- Título centrado -->
            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_resource_title"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/urlInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    app:boxStrokeColor="?attr/colorOutlineVariant"
                    app:hintEnabled="false"
                    app:boxCornerRadiusTopStart="50dp"
                    app:boxCornerRadiusTopEnd="50dp"
                    app:boxCornerRadiusBottomStart="50dp"
                    app:boxCornerRadiusBottomEnd="50dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/urlEditText"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:hint="@string/add_resource_hint_url"
                        android:maxLines="1"
                        android:inputType="textUri"
                        android:imeOptions="actionNext"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/titleInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    app:boxStrokeColor="?attr/colorOutlineVariant"
                    app:hintEnabled="false"
                    app:boxCornerRadiusTopStart="50dp"
                    app:boxCornerRadiusTopEnd="50dp"
                    app:boxCornerRadiusBottomStart="50dp"
                    app:boxCornerRadiusBottomEnd="50dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/titleEditText"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:maxLines="1"
                        android:inputType="textCapWords"
                        android:imeOptions="actionNext"
                        android:hint="@string/edit_resource_hint_title"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/descriptionInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    app:boxStrokeColor="?attr/colorOutlineVariant"
                    app:hintEnabled="false"
                    app:boxCornerRadiusTopStart="30dp"
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxCornerRadiusBottomStart="30dp"
                    app:boxCornerRadiusBottomEnd="30dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/descriptionEditText"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:gravity="top|start"
                        android:hint="@string/edit_resource_hint_description"
                        android:minLines="4"
                        android:maxLines="5"
                        android:inputType="textMultiLine"
                        android:scrollbars="vertical"
                        android:overScrollMode="always"
                        android:imeOptions="actionNext"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/categoryInputLayout"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    app:boxStrokeColor="?attr/colorOutlineVariant"
                    app:hintEnabled="false"
                    app:boxCornerRadiusTopStart="50dp"
                    app:boxCornerRadiusTopEnd="50dp"
                    app:boxCornerRadiusBottomStart="50dp"
                    app:boxCornerRadiusBottomEnd="50dp">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/categoryAutoCompleteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:hint="@string/edit_resource_hint_category"
                        android:imeOptions="actionNext"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tagInputLayout"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    app:boxStrokeColor="?attr/colorOutlineVariant"
                    app:hintEnabled="false"
                    app:boxCornerRadiusTopStart="50dp"
                    app:boxCornerRadiusTopEnd="50dp"
                    app:boxCornerRadiusBottomStart="50dp"
                    app:boxCornerRadiusBottomEnd="50dp">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/tagAutoCompleteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:inputType="text"
                        android:hint="@string/edit_resource_hint_tags"
                        android:imeOptions="actionNext"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/tagsChipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:chipSpacing="8dp"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/edit_resource_update_button"
                    android:layout_marginTop="10dp"
                    android:textColor="?attr/colorOnPrimaryFixed"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>